[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "datatools"
version = "0.0.0"
dependencies = [
	'matplotlib',
	'pandas',
	'numpy'
]
description = "Personnal collection of data-related code snippets."
authors = [
    { name = "Rémi CONNESSON" }
]
readme = "README.md"

[options]
package_dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["datatools", "datatools.*"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
